--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -8,7 +8,7 @@
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our official webpage under
+# There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -19,7 +19,6 @@
 # http://www.powerfolder.com
 #
 
-folderjoin.invitationtext=Message
 abortcopy.description=Abort the copy process
 abortcopy.key=A
 abortcopy.name=Abort
@@ -52,10 +51,10 @@ about.dialog.version.buildtime=Build time\: {0}
 about.dialog.version.text=Version\: {0}
 about.dialog.version.title=Version
 about.dialog.yoursystem.java_version=Java version\: {0}
+about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.os=OS\: {0}
 about.dialog.yoursystem.screen=Screen\: {0}x{1}
 about.dialog.yoursystem.title=Your System
-about.dialog.yoursystem.max=Max memory\: {0}MB
 about.dialog.yoursystem.used=Used memory\: {0}MB
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
@@ -78,8 +77,8 @@ addressEditor.parseerror=<html>Please enter the IPs to be considered on LAN, val
 addressEditor.title=IP-Range
 
 apps.dir.firefox=Firefox
-apps.dir.thunderbird=Thunderbird
 apps.dir.outlook=Outlook
+apps.dir.thunderbird=Thunderbird
 
 buypro.description=Upgrade to PowerFolder Pro now
 buypro.key=B
@@ -87,7 +86,7 @@ buypro.name=Buy Pro
 
 chat.notification.option1=Answer
 chat.notification.option2=Close
-chat.notification.subtitle=<html><b>PowerFolder</b><br>New chat message:</html>
+chat.notification.subtitle=<html><b>PowerFolder</b><br>New chat message\:</html>
 
 chatpanel.cannot_deliver=message can not be delivered because '{0}' is not connected
 chatpanel.chat_with=Chat with
@@ -148,19 +147,18 @@ dialog.connection_problem=Connection problem
 dialog.customsync.autodownloadfromfriends=Autodownload from friends
 dialog.customsync.autodownloadfromother=Autodownload from others
 dialog.customsync.changedetection_disabled=Change detection disabled
-dialog.customsync.regularSync=Regular synchronization
-dialog.customsync.timebetweenscans=(Maximum) time until change detection
 dialog.customsync.dailySync=Daily synchronization
-dialog.customsync.hourDaySync=Hour / day of synchronization
 dialog.customsync.everyDay=Every day
-dialog.customsync.weekends=Weekends
-dialog.customsync.weekdays=Weekdays
-
+dialog.customsync.hourDaySync=Hour / day of synchronization
+dialog.customsync.regularSync=Regular synchronization
 dialog.customsync.syncdeletionwithfriends=Synchronize deletion with friends
 dialog.customsync.syncdeletionwithothers=Synchronize deletion with others
 dialog.customsync.syncprofilescombo=Default synchronization profile
 dialog.customsync.text=Select default and / or customize synchronization profile
+dialog.customsync.timebetweenscans=(Maximum) time until change detection
 dialog.customsync.title=Choose synchronization profile
+dialog.customsync.weekdays=Weekdays
+dialog.customsync.weekends=Weekends
 dialog.directorychooser.new.description=New directory
 dialog.directorychooser.new.exists={0}\nalready exists
 dialog.directorychooser.new.key=N
@@ -169,8 +167,8 @@ dialog.directorychooser.new.problem=There was a problem creating\n{0}
 dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
 dialog.directorychooser.title=Select directory
 dialog.fatalerror.title=Fatal Error
-dialog.newdirectorycreator.title=New directory
 dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
+dialog.newdirectorycreator.title=New directory
 dialog.synchronization.choose=Please choose your sync action
 dialog.synchronization.receive_changes=Receive changes
 dialog.synchronization.send_and_receive_changes=Publish and receive changes
@@ -189,13 +187,16 @@ dialog.updatecheck.noUpdateAvailable=This version is up to date
 dialog.updatecheck.nothingNeverAsk=Nothing and Never ask again
 dialog.updatecheck.text=A newer version of PowerFolder is available            \n\nThis version\: v{0}\nLatest available\: v{1} (newer)\n
 dialog.updatecheck.title=Newer version available
-dialog.user_select.title=Select Users
-dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
 dialog.user_select.online_only=
+dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
+dialog.user_select.title=Select Users
 
 disablesilentmode.description=Silent mode currently active, added/modified files won't be found. Press for full mode
 disablesilentmode.key=w
 disablesilentmode.name=Wakeup\!
+
+download_panel.auto_cleanup.description=Cleans up any downloads when they complete
+download_panel.auto_cleanup.name=Auto-cleanup
 
 downloadfile.description=Download selected file(s) (or files in directory). Deleted files will be re-downloaded
 downloadfile.failed.sourcenotfound=Unable to download file {0}, source not found
@@ -203,19 +204,16 @@ downloadfile.key=D
 downloadfile.name=Download File(s)
 downloadfile.unable_to_download=Unable to download
 
-download_panel.auto_cleanup.name=Auto-cleanup
-download_panel.auto_cleanup.description=Cleans up any downloads when they complete
-
 empty_recycle_bin.description=Empty the PowerFolder Recycle Bin
 empty_recycle_bin.key=E
 empty_recycle_bin.name=Empty Recycle Bin
 empty_recycle_bin.working.description=Deleting files
 empty_recycle_bin.working.title=Emptying the Recycle Bin
 
-empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
-empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
-empty_recycle_bin_confimation.empty=Empty
 empty_recycle_bin_confimation.dont=Do Not Empty
+empty_recycle_bin_confimation.empty=Empty
+empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
+empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
 
 enablesilentmode.description=Disables all heavy tasks, e.g. scanning for changes in folders, thus no disk activity
 enablesilentmode.key=s
@@ -327,6 +325,7 @@ folderjoin.description=Join this Folder
 folderjoin.dialog.title=Join folder {0}?
 folderjoin.inivtation=Invitation received
 folderjoin.inivtationfrom=Invitation received from {0}
+folderjoin.invitationtext=Message
 folderjoin.invitortofriend=Add invitor to friends
 folderjoin.key=J
 folderjoin.name=Join
@@ -358,8 +357,8 @@ folderpanel.hometab.folder_not_empty.title=Folder not empty
 folderpanel.hometab.local_folder_location=Local folder location
 folderpanel.hometab.local_size=Local size
 folderpanel.hometab.move_content=Current folder contents can be moved to the new folder.
-folderpanel.hometab.move_content.move=Move Contents
 folderpanel.hometab.move_content.dont=Do Not Move Contents
+folderpanel.hometab.move_content.move=Move Contents
 folderpanel.hometab.move_content.title=Move folder contents
 folderpanel.hometab.move_error.other=There was an error moving the folder\:\n{0}
 folderpanel.hometab.move_error.other_temp=There was an error moving the folder\:\n{0}\n\nSome of your files may be in\n{1}
@@ -440,6 +439,7 @@ general.folder=Folder
 general.folder.public=Public (visible for all)
 general.folder.secret=Private (requires invitation)
 general.foldername=Name
+general.friday=Friday
 general.friendlist=Friendlist
 general.from=from
 general.help=help
@@ -450,8 +450,9 @@ general.localcopyat=Local copy at
 general.localcopyplace=Choose a place for local copy
 general.localized_date_format=MMMM dd. yyyy
 general.localnet=LAN
-general.minutes=Minute(s)
 general.member=Member
+general.minutes=Minute(s)
+general.monday=Monday
 general.notavailable=not available
 general.notfound=not found
 general.notonfriends=Find Users
@@ -461,29 +462,27 @@ general.overwrite=Overwrite
 general.overwrite_all=Overwrite all
 general.powerfolder=PowerFolder
 general.recyclebin=Recycle Bin
+general.saturday=Saturday
 general.seconds=Second(s)
 general.show=show
 general.show_never_again=Do not show this message again
 general.show_never_again.key=D
 general.size=Size
 general.skip=Skip
+general.sunday=Sunday
 general.synchonisation=Synchronization
 general.syncprofile=Sync profile
+general.thursday=Thursday
 general.time=%02d\:%02d\:%02d
 general.today=today
+general.tuesday=Tuesday
 general.uploads=Uploads
 general.user=User
 general.visibility=Visibility
 general.webservice=Online Storage
+general.wednesday=Wednesday
 general.whatisthis=What is this?
 general.yesterday=yesterday
-general.sunday=Sunday
-general.monday=Monday
-general.tuesday=Tuesday
-general.wednesday=Wednesday
-general.thursday=Thursday
-general.friday=Friday
-general.saturday=Saturday
 
 hideoffline.description=The offline users will be filtered from this search result
 hideoffline.key=H
@@ -511,14 +510,6 @@ limitedconnection.dont_autodetect=No longer detect limited connectivity
 limitedconnection.text=PowerFolder has detected limited connectivity to the network.\nThis may caused by a firewall, router or windows connection share.\nHow to improve your connectivity is answered in our documentation.\nhttp\://docs.powerfolder.com
 limitedconnection.title=Limited connectivity
 
-lowmemory.dont_autodetect=Do not detect low memory
-lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
-lowmemory.title=Low memory
-lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
-lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
-lowmemory.increase=Increase Memory
-lowmemory.do_nothing=Do Nothing
-
 linespeed.T1=T1 (1.544mbit)
 linespeed.T3=T3 (43.232mbit)
 linespeed.adsl128=DSL 1000 (128Kbit up)
@@ -540,6 +531,14 @@ linktoclipboard.key=c
 linktoclipboard.name=Copy PowerFolder link to Clipboard
 
 loadinvitation.title=Join a folder from an invitation file
+
+lowmemory.configure_failure=PowerFolder was unable to configure additional memory.\nPlease contact PowerFolder Support for advice.
+lowmemory.configure_success=Additional memory has been configured.\nPowerFolder must be restarted manually for this to take effect.
+lowmemory.do_nothing=Do Nothing
+lowmemory.dont_autodetect=Do not detect low memory
+lowmemory.increase=Increase Memory
+lowmemory.text=PowerFolder is running out of available memory.\n\nPowerFolder can attempt to increase the available memory.
+lowmemory.title=Low memory
 
 masternode.nobody=- nobody -
 
@@ -670,8 +669,8 @@ preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder progr
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
 preferences.dialog.dialogs.warnonlimitedconnectivity=Warn on limited connectivity (No incomming connections)
-preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dialogs.warnonlowmemory=Warn on low available memory
+preferences.dialog.dialogs.warnonpossiblefilenameproblems=Warn on possible filename problems (e.g. too long for Apple classic)
 preferences.dialog.dyndns=My (dynamic) DNS
 preferences.dialog.dyndns.title=DynDNS
 preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
@@ -717,9 +716,9 @@ preferences.dialog.plugin.status_enabled=Enabled
 preferences.dialog.plugin.title=Pro Settings
 preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port.
-preferences.dialog.restart.title=Restart required
-preferences.dialog.restart.text=Some changes require PowerFolder to restart.
 preferences.dialog.restart.restart=Restart Now
+preferences.dialog.restart.text=Some changes require PowerFolder to restart.
+preferences.dialog.restart.title=Restart required
 preferences.dialog.showadvanced=Show Advanced Preferences
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
@@ -836,13 +835,13 @@ remove_from_recycle_bin.description=Delete file from the PowerFolder Recycle Bin
 remove_from_recycle_bin.key=D
 remove_from_recycle_bin.name=Delete File
 
-remove_pattern.title=Remove ignore pattern
-remove_pattern.prompt=Pattern '{0}' will be removed.
-remove_pattern.remove=Remove
-remove_pattern.dont=Do Not Remove
-
 remove_from_recycle_bin_confimation.text=Are you sure you want to delete the following file(s)?
 remove_from_recycle_bin_confimation.title=Delete files?
+
+remove_pattern.dont=Do Not Remove
+remove_pattern.prompt=Pattern '{0}' will be removed.
+remove_pattern.remove=Remove
+remove_pattern.title=Remove ignore pattern
 
 removefriend.description=Removes user from friendlist
 removefriend.key=r
@@ -891,15 +890,15 @@ sendinvitation.example_emailaddress=email@domain.com
 sendinvitation.folder.text=Send invitation to
 sendinvitation.folder.title=Send Invitation
 sendinvitation.key=i
+sendinvitation.multi_users=Multiple users selected
 sendinvitation.name=Send Invitation
+sendinvitation.no_users=No users selected
 sendinvitation.placetostore=Choose a place to store invitation
 sendinvitation.subject=Invitation to the PowerFolder '{0}'
 sendinvitation.toclipboard=To clipboard...
 sendinvitation.todisk=To disk...
 sendinvitation.user.text=Select the folder you want {0} invite to
 sendinvitation.user.title=Invite {0} to a folder
-sendinvitation.no_users=No users selected
-sendinvitation.multi_users=Multiple users selected
 
 setmasternode.description=Selects the administration user for your friendlist. Friendlist loaded from adminitrator
 setmasternode.dialog.text=Select the administrator for your friendlist
@@ -1002,10 +1001,11 @@ unignorefile.key=R
 unignorefile.name=Remove from Ignore pattens
 
 user.dir.contacts=Contacts
+user.dir.custom=Custom
 user.dir.desktop=Desktop
 user.dir.documents=Documents
-user.dir.favorites=Favorites
 user.dir.evolution=Evolution
+user.dir.favorites=Favorites
 user.dir.links=Links
 user.dir.music=Music
 user.dir.my_documents=My Documents
@@ -1015,7 +1015,6 @@ user.dir.my_videos=My Videos
 user.dir.pictures=Pictures
 user.dir.recent_documents=Recent Documents
 user.dir.videos=Videos
-user.dir.custom=Custom
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
@@ -1024,19 +1023,19 @@ wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
 wizard.basicsetup.private=LAN and Internet
 wizard.basicsetup.title=Basic Setup
-wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.basicsetup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
+wizard.basicsetup.upload.title=Unlimited connection speed
 wizard.choosedisklocation.select=Select directory
 wizard.choosedisklocation.title=Disk location
 wizard.control.back=< Back
-wizard.control.cancel=Cancel
-wizard.control.finish=Finish
-wizard.control.help=Help
-wizard.control.next=Next >
 wizard.control.back.description=Go to previous wizard step
+wizard.control.cancel=Cancel
 wizard.control.cancel.description=Cancel this wizard
+wizard.control.finish=Finish
 wizard.control.finish.description=Finish this wizard task
+wizard.control.help=Help
 wizard.control.help.description=Show online help (Alt-8)
+wizard.control.next=Next >
 wizard.control.next.description=Go to next wizard step
 wizard.description=Opens wizard
 wizard.filesharing.browse=Browse in Public Folders
