#719 - Rework Folder Wizard

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -113,7 +113,7 @@ console.updatecheck.new_developmentversion=------------ New development version 
 
 createshortcut.description=Creates a shortcut to this folder on your desktop
 createshortcut.key=D
-createshortcut.name=Create Desktop Shortcut
+createshortcut.name=Create desktop shortcut
 
 delete_confimation.busy.description=Removing file(s)
 delete_confimation.busy.title=Deleting file(s)
@@ -499,10 +499,6 @@ infoside.title=Information
 
 invitationfiles.description=PowerFolder invitations
 
-join_by_invitation.description=Joins folder by invitation, loads invitation from disk
-join_by_invitation.key=I
-join_by_invitation.name=Load Invitation
-
 joinfolder.already_joined_text=You are already a member of folder {0}
 joinfolder.already_joined_title=Unable to join {0}
 
@@ -719,7 +715,7 @@ preferences.dialog.randomPort.tooltip=PowerFolder will try to bind random port.
 preferences.dialog.restart.restart=Restart Now
 preferences.dialog.restart.text=Some changes require PowerFolder to restart.
 preferences.dialog.restart.title=Restart required
-preferences.dialog.showadvanced=Show Advanced Preferences
+preferences.dialog.showadvanced=Show advanced preferences
 preferences.dialog.showpreviewpanel=Enable internal image preview
 preferences.dialog.showpreviewpanel.tooltip=<HTML><BODY>You can find the image preview under My Folders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
 preferences.dialog.silentthrottle=Silentmode bandwidth throttle
@@ -732,12 +728,12 @@ preferences.dialog.startPanel.overview=Overview
 preferences.dialog.startwithwindows=Start PowerFolder with Windows
 preferences.dialog.statusCantResolve=DynDns {0}\: cannot be resolved\!
 preferences.dialog.statusDynDnsSuccess=DynDns {0} validated successfully\!
-preferences.dialog.statusValidFailed=DynDns {0}\: validation Failed\!
+preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
 preferences.dialog.title=Preferences
 preferences.dialog.titleProcessing=processing...
 preferences.dialog.userecyclebin=Use recycle bin (default)
-preferences.dialog.useziponlan=Use ZIP Compression on LAN
+preferences.dialog.useziponlan=Use ZIP compression on LAN
 preferences.dialog.useziponlan.tooltip=Enable if files to transfer are easy to compress (this may effect your CPU load)
 preferences.dialog.verbose=Enable debug logging
 preferences.dialog.warnningMessage=Warning
@@ -937,7 +933,7 @@ syncprofile.backupsource.name=Backup (Source)
 syncprofile.backuptarget.name=Backup (Target)
 syncprofile.custom.name=Custom profile
 syncprofile.manualdownload.name=Hosting (Manual download)
-syncprofile.projectwork.name=Project work (Manual Sync)
+syncprofile.projectwork.name=Project work (Manual sync)
 syncprofile.syncpcs.name=Mirror
 
 systemservice.options.info1=Use these options install/uninstall
@@ -1038,14 +1034,7 @@ wizard.control.help.description=Show online help (Alt-8)
 wizard.control.next=Next >
 wizard.control.next.description=Go to next wizard step
 wizard.description=Opens wizard
-wizard.filesharing.browse=Browse in Public Folders
-wizard.filesharing.browseinfo=To browse in public folders (gray),\nuse the navigation tree on the left side.\nTheir files are shown on the right
-wizard.filesharing.folderjoinsuccess=You successfully joined the folder
-wizard.filesharing.loadinvitation=Join a Folder by Invitation
-wizard.filesharing.selecttarget=Please select download directory
-wizard.filesharing.share=Share/Open a new folder
 wizard.filesharing.sharedsuccess=You successfully shared a new folder\!\nOther users may join now
-wizard.filesharing.title=Filesharing
 wizard.key=w
 wizard.loadinvitation.addtofriends=Add {0} to friends
 wizard.loadinvitation.choosefile=Choose the invitation file
@@ -1057,17 +1046,11 @@ wizard.pfwizard.title=Wizard
 wizard.projectname.choose=Choose project name
 wizard.projectname.entername=Enter the name of your project
 wizard.projectname.title=Load invitation
-wizard.projectsync.projectsyncsuccess=You successfully set up a project synchronization\!\nOther project members may join now
-wizard.projectsync.selectdirectory=Please select the directory where your project files are located
-wizard.projectsync.selectlocaldirectory=Please select local target directory for the project files
-wizard.projectsync.setupsync=Setup a project synchronization
-wizard.projectsync.successjoin=You have successfully joined the project\!
-wizard.projectsync.takepartsync=Take part in a synchronization
-wizard.projectsync.title=Project synchronization
-wizard.sendinvitations.additionaltext=Additional Information
+wizard.invite.selectlocaldirectory=Please select local target directory for the files
+wizard.successjoin=You have successfully joined the folder\!
 wizard.sendinvitations.invitationtext=Enter a message for the receiver
 wizard.sendinvitations.invitationtextsample=
-wizard.sendinvitations.joinsync=Invitation files are required to join a mirror.
+wizard.sendinvitations.join=Invitation files are required to join a folder.
 wizard.sendinvitations.neveruntrusted=Never give out invitation files to untrusted people.
 wizard.sendinvitations.offline=Not connected
 wizard.sendinvitations.overpf=Via PowerFolder now
@@ -1080,17 +1063,18 @@ wizard.sendinvitations.title=Save invitation
 wizard.setupdns.dyndnshomepage=Dyndns Homepage
 wizard.setupdns.enterdns=Enter your (dynamic) dns
 wizard.setupdns.improvesread=It improves your reachability. However this is not required
-wizard.setupdns.nodnssetup=You did not setup a (dynamic) dns address yet\!
+wizard.setupdns.nodnssetup=You have not setup a (dynamic) dns address yet\!
 wizard.setupdns.title=Setup (dynamic) dns
+wizard.setupdns.validate=Validate 
 wizard.setupsuccess=Setup successfully
-wizard.syncpcspanel.folderjoinsuccess=You successfully joined a folder mirror\!\n
 wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
+wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
 wizard.syncpcspanel.select=Please select the directory which should be mirrored
-wizard.syncpcspanel.selecttarget=Please select local target directory
-wizard.syncpcspanel.setup=Setup a new mirror
-wizard.syncpcspanel.takepart=Take part in a mirror
-wizard.syncpcspanel.title=Mirror
+wizard.backup_panel.select=Please select the directory which should be backed up
+wizard.project_panel.select=Please select the project directory
+wizard.backup_panel.pcsjoin=Other computers can join this folder now
 wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
 wizard.webservice.learnmore=What is the PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
@@ -1099,9 +1083,10 @@ wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 wizard.webservice.password=Password
 wizard.webservice.register=Register New Account
 wizard.webservice.username=Email
-wizard.whattodo.bordertext=Choose your action
-wizard.whattodo.filesharing=Share Files
+wizard.whattodo.backup_folder=Create Folder Backup
 wizard.whattodo.openonlinedocumentation=Open Online Documentation
-wizard.whattodo.projectwork=Synchronize Project
-wizard.whattodo.syncpcs=Mirror
+wizard.whattodo.projectwork=Create Synchronized Project
+wizard.whattodo.mirror_folder=Create Mirrored Folder
 wizard.whattodo.title=What do you want to do?
+wizard.whattodo.custom_sync=Create Custom Profile Folder
+wizard.whattodo.load_invite=Load Invitation File
