Done en_GB translations.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -3,12 +3,12 @@
 #
 # Guide:
 # Missing translations are marked with ## in front of the line
-# You just need to translate the english text behind the =
+# You just need to translate the English text behind the =
 # Then remove the ## in front of the line.
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our offical webpage under
+# There is also a guide on our official webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -103,7 +103,7 @@ clearrecentdownloads.description=Clears the list of the recent problems
 clearrecentdownloads.key=c
 clearrecentdownloads.name=Cleanup
 
-connect.description=Manually connects to a Powerfolder User
+connect.description=Manually connects to a PowerFolder user
 connect.dialog.text=Please enter the hostname or ip of the user you want to connect.\n\nPowerFolder automatically connects to the network after a short time,\nuse this option if you want to manually connect to a user.\n
 connect.dialog.title=Manually connect to a powerfolder user
 connect.key=c
