--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1083,10 +1083,10 @@ wizard.webservice.mirrorsetup=Backup Folder by Online Storage
 wizard.webservice.password=Password
 wizard.webservice.register=Register New Account
 wizard.webservice.username=Email
-wizard.whattodo.backup_folder=Create Folder Backup
-wizard.whattodo.openonlinedocumentation=Open Online Documentation
-wizard.whattodo.projectwork=Create Synchronized Project
-wizard.whattodo.mirror_folder=Create Mirrored Folder
+wizard.whattodo.backup_folder=Backup a folder
+wizard.whattodo.openonlinedocumentation=Open documentation
+wizard.whattodo.projectwork=Setup a synced project
+wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.title=What do you want to do?
-wizard.whattodo.custom_sync=Create Custom Profile Folder
-wizard.whattodo.load_invite=Load Invitation File
+wizard.whattodo.custom_sync=Share a folder (customized)
+wizard.whattodo.load_invite=Open invitation file
