Finalizations and german translation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -3,12 +3,12 @@
 #
 # Guide:
 # Missing translations are marked with ## in front of the line
-# You just need to translate the English text behind the =
+# You just need to translate the english text behind the =
 # Then remove the ## in front of the line.
 #
 # Pro version translations start with the prefix 'pro.'
 #
-# There is also a guide on our official webpage under
+# There is also a guide on our offical webpage under
 # http://www.powerfolder.com/node/i18n
 #
 # When you are completed please send your translation file to
@@ -1014,6 +1014,9 @@ user.dir.videos=Videos
 
 winutils.shortcut.description=This shortcut was placed here by PowerFolder
 
+wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
+wizard.backup_panel.pcsjoin=Other computers can join this folder now
+wizard.backup_panel.select=Please select the directory which should be backed up
 wizard.basicsetup.enternick=Please enter your nickname
 wizard.basicsetup.lanonly=LAN only
 wizard.basicsetup.networking=Connect to
@@ -1035,6 +1038,7 @@ wizard.control.next=Next >
 wizard.control.next.description=Go to next wizard step
 wizard.description=Opens wizard
 wizard.filesharing.sharedsuccess=You successfully shared a new folder\!\nOther users may join now
+wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=w
 wizard.loadinvitation.addtofriends=Add {0} to friends
 wizard.loadinvitation.choosefile=Choose the invitation file
@@ -1043,11 +1047,11 @@ wizard.loadinvitation.selectfile=Please select invitation file
 wizard.loadinvitation.title=Load invitation
 wizard.name=Wizard
 wizard.pfwizard.title=Wizard
+wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
+wizard.project_panel.select=Please select the project directory
 wizard.projectname.choose=Choose project name
 wizard.projectname.entername=Enter the name of your project
 wizard.projectname.title=Load invitation
-wizard.invite.selectlocaldirectory=Please select local target directory for the files
-wizard.successjoin=You have successfully joined the folder\!
 wizard.sendinvitations.invitationtext=Enter a message for the receiver
 wizard.sendinvitations.invitationtextsample=
 wizard.sendinvitations.join=Invitation files are required to join a folder.
@@ -1067,14 +1071,10 @@ wizard.setupdns.nodnssetup=You have not setup a (dynamic) dns address yet\!
 wizard.setupdns.title=Setup (dynamic) dns
 wizard.setupdns.validate=Validate 
 wizard.setupsuccess=Setup successfully
+wizard.successjoin=You have successfully joined the folder\!
 wizard.syncpcspanel.foldersyncsuccess=You successfully set up a folder mirror\!\n
-wizard.backup_panel.folder_backup_success=You successfully set up a folder backup\!\n
-wizard.project_panel.folder_project_success=You successfully set up a project folder\!\n
 wizard.syncpcspanel.pcsjoin=Other computers can join this folder now
 wizard.syncpcspanel.select=Please select the directory which should be mirrored
-wizard.backup_panel.select=Please select the directory which should be backed up
-wizard.project_panel.select=Please select the project directory
-wizard.backup_panel.pcsjoin=Other computers can join this folder now
 wizard.webservice.enteraccount=Please enter your account data to login to the Online Storage
 wizard.webservice.learnmore=What is the PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
@@ -1084,9 +1084,9 @@ wizard.webservice.password=Password
 wizard.webservice.register=Register New Account
 wizard.webservice.username=Email
 wizard.whattodo.backup_folder=Backup a folder
-wizard.whattodo.openonlinedocumentation=Open documentation
-wizard.whattodo.projectwork=Setup a synced project
-wizard.whattodo.mirror_folder=Mirror a folder
-wizard.whattodo.title=What do you want to do?
 wizard.whattodo.custom_sync=Share a folder (customized)
 wizard.whattodo.load_invite=Open invitation file
+wizard.whattodo.mirror_folder=Mirror a folder
+wizard.whattodo.openonlinedocumentation=Open Online documentation
+wizard.whattodo.projectwork=Setup a synced project
+wizard.whattodo.title=What do you want to do?
