--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1038,6 +1038,9 @@ wizard.control.next=Next >
 wizard.control.next.description=Go to next wizard step
 wizard.description=Opens wizard
 wizard.filesharing.sharedsuccess=You successfully shared a new folder\!\nOther users may join now
+wizard.host_panel.select=Please select the directory which should be the host
+wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
+wizard.host_panel.pcsjoin=Other computers can join this folder now
 wizard.invite.selectlocaldirectory=Please select local target directory for the files
 wizard.key=w
 wizard.loadinvitation.addtofriends=Add {0} to friends
@@ -1085,6 +1088,7 @@ wizard.webservice.register=Register New Account
 wizard.webservice.username=Email
 wizard.whattodo.backup_folder=Backup a folder
 wizard.whattodo.custom_sync=Share a folder (customized)
+wizard.whattodo.hostwork=Host a folder
 wizard.whattodo.load_invite=Open invitation file
 wizard.whattodo.mirror_folder=Mirror a folder
 wizard.whattodo.openonlinedocumentation=Open Online documentation
