--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -65,11 +65,11 @@ aboutwebservice.description=Opens the Online Storage in default browser
 aboutwebservice.key=A
 aboutwebservice.name=About Online Storage
 
-addfriend.description=Adds user to friendlist
+addfriend.description=Adds user to friend list
 addfriend.key=f
-addfriend.name=Add to Friends
+addfriend.name=Add To Friends
 
-addmodifierfriend.description=Adds the modifier of file to friendlist
+addmodifierfriend.description=Adds the modifier of file to friend list
 addmodifierfriend.key=f
 addmodifierfriend.name=Add file Modifier to Friends
 
@@ -95,6 +95,8 @@ chatpanel.member_disconnected_at_time={0} disconnected at {1}
 chatpanel.member_joined_folder_at_time={0} joined folder at {1}
 chatpanel.member_left_folder_at_time={0} left folder at {1}
 
+change.friend.personal.message.text=You may include a personal message for {0}
+change.friend.personal.message.title=Add friend message
 clearcompleteddownloads.description=Clears the list of the recently completed downloads (Alt-3)
 clearcompleteddownloads.key=c
 clearcompleteddownloads.name=Cleanup
@@ -129,13 +131,12 @@ deletefile.description=Delete selected file(s)
 deletefile.key=F
 deletefile.name=Delete File(s)
 
-dialog.addmembertofriendlist.button.no=No
-dialog.addmembertofriendlist.button.no_neveraskagain=No (Never ask me again)
-dialog.addmembertofriendlist.button.yes=Yes
-dialog.addmembertofriendlist.explain=(By adding someone to your friendlist, you give him the permission to modify the\ncontent of your folders. e.g. to add new files. You can easily change the friend\nstatus of a member using the context menus (right-mouse-click)).
-dialog.addmembertofriendlist.question={0} joined one or more folders\:\n\n{1}\ndo you want to add him to your friendlist now?
-dialog.addmembertofriendlist.question2={0} has added you to his friendlist,\n\ndo you want to add him to your friendlist now?
-dialog.addmembertofriendlist.title=Add {0} to friendlist
+dialog.addmembertofriendlist.button.add=Add To Friends
+dialog.addmembertofriendlist.explain=(By adding someone to your friend list, you give him the permission to modify the\ncontent of your folders, e.g. to add new files. You can easily change the friend\nstatus of a member using the context menus (right-mouse-click)).
+dialog.addmembertofriendlist.question={0} joined one or more folders\:\n\n{1}\nYou may wish to add him to your friend list.
+dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
+dialog.addmembertofriendlist.title=Add {0} to friend list
+dialog.addmembertofriendlist.messageTitle=Message from {0}
 dialog.alreadyrunning.exitbutton=Exit
 dialog.alreadyrunning.startbutton=Start anyways
 dialog.alreadyrunning.title=Already running
@@ -254,8 +255,8 @@ filelist.modifiedby=Modified by
 filelist.name=Name
 filelist.recursive=flat view
 filelist.status.no_files_available_add_files_and_invite=No files available... add files in your local folder and ask others to join this folder by Invitation
-filelist.status.no_files_available_add_files_in_folder=No files available... Add files in you local folder to share them
-filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching filelist
+filelist.status.no_files_available_add_files_in_folder=No files available... add files in you local folder to share them
+filelist.status.no_files_available_yet_fetching_filelist=No files available yet... fetching file list
 
 filenameproblem.dialog.add_to_ignore=Add to ignore
 filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
@@ -413,7 +414,9 @@ friendsearch.nodetable.ip=IP
 friendsearch.nodetable.last_seen_online=Last seen online
 friendsearch.nodetable.name=Name
 friendsearch.nodetable.on_local_network=On LAN
-
+friend.search.personal.message.title=Add friend message
+friend.search.personal.message.text=You may include a personal message
+friend.search.personal.message.text2=You may include a personal message for {0}
 friendspanel.connected=Connected
 friendspanel.currently_online=Currently online
 friendspanel.n_a=n/a
@@ -440,7 +443,7 @@ general.folder.public=Public (visible for all)
 general.folder.secret=Private (requires invitation)
 general.foldername=Name
 general.friday=Friday
-general.friendlist=Friendlist
+general.friendlist=Friend list
 general.from=from
 general.help=help
 general.hide=hide
@@ -456,6 +459,7 @@ general.monday=Monday
 general.notavailable=not available
 general.notfound=not found
 general.notonfriends=Find Users
+general.neverAskAgain=Never ask this again
 general.ok=OK
 general.ok.key=O
 general.overwrite=Overwrite
@@ -471,14 +475,12 @@ general.size=Size
 general.skip=Skip
 general.sunday=Sunday
 general.synchonisation=Synchronization
-general.syncprofile=Sync profile
 general.thursday=Thursday
 general.time=%02d\:%02d\:%02d
 general.today=today
 general.tuesday=Tuesday
 general.uploads=Uploads
 general.user=User
-general.visibility=Visibility
 general.webservice=Online Storage
 general.wednesday=Wednesday
 general.whatisthis=What is this?
@@ -564,7 +566,6 @@ myfolderstable.number_of_deleted_files=\# Deleted
 myfolderstable.number_of_local_files=\# Local
 myfolderstable.number_of_members={0} members
 myfolderstable.sync=Sync
-myfolderstable.sync_percetage=Sync%
 myfolderstable.syncprofile=Sync Profile
 myfolderstable.total_size=Total Size
 
@@ -578,7 +579,6 @@ navigationbuttons.up_to=Up to {0}
 navtree.me=me
 navtree.node=Node {0}
 navtree.onlinenodes=Connected Users ({0})
-navtree.recyclebin_size=Recycle Bin ({0})
 navtree.title=Navigation
 
 networkstatisticspanel.connected_users=Connected users
@@ -596,11 +596,11 @@ nodeinfo.error=Unable to request node information
 nodeinfo.requesting=Requesting node information...
 
 onepublicfolderpanel.estimated_size_in_files=Estimated size\: {0} files ({1})
-onepublicfolderpanel.file_list_not_found=Filelist not found
+onepublicfolderpanel.file_list_not_found=File list not found
 onepublicfolderpanel.no_one_online_found=No one online found for this folder, will try anyway
 onepublicfolderpanel.private=private
 onepublicfolderpanel.public=public
-onepublicfolderpanel.searching_filelist_in_network=Searching filelist in network ...
+onepublicfolderpanel.searching_filelist_in_network=Searching file list in network ...
 onepublicfolderpanel.this_may_take_up_to_2_minutes=This may take up to 2 minutes
 onepublicfolderpanel.unable_to_connect_to_a_source=Unable to connect to a source
 
@@ -661,6 +661,7 @@ preferences.dialog.deleteemptydirs=Delete empty directories
 preferences.dialog.deltasync=Use delta sync
 preferences.dialog.deltasync.tooltip=Synchronize only changed file-parts.
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to friends if a node becomes a member of a folder
+preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add personal message for friend
 preferences.dialog.dialogs.check_for_program_updates=Check for PowerFolder program updates
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.dialogs.warnoncloseifnotinsync=Warn on close of program if a folder is still synchronizing
@@ -839,17 +840,17 @@ remove_pattern.prompt=Pattern '{0}' will be removed.
 remove_pattern.remove=Remove
 remove_pattern.title=Remove ignore pattern
 
-removefriend.description=Removes user from friendlist
+removefriend.description=Removes user from friend list
 removefriend.key=r
 removefriend.name=Remove Friend
 
-removemodifierfriend.description=Removes the file modifier from friendlist
+removemodifierfriend.description=Removes the file modifier from friend list
 removemodifierfriend.key=r
 removemodifierfriend.name=Remove Modifier from Friends
 
-requestfilelist.description=Refreshes the filelist of that folder from remote users
+requestfilelist.description=Refreshes the file list of that folder from remote users
 requestfilelist.key=f
-requestfilelist.name=Request new Filelist
+requestfilelist.name=Request new File list
 
 requestnetfolderlist.description=Refreshes the list of public folders
 requestnetfolderlist.key=r
@@ -896,9 +897,9 @@ sendinvitation.todisk=To disk...
 sendinvitation.user.text=Select the folder you want {0} invite to
 sendinvitation.user.title=Invite {0} to a folder
 
-setmasternode.description=Selects the administration user for your friendlist. Friendlist loaded from adminitrator
-setmasternode.dialog.text=Select the administrator for your friendlist
-setmasternode.dialog.title=Friendlist administrator
+setmasternode.description=Selects the administration user for your friend list. Friend list loaded from adminitrator
+setmasternode.dialog.text=Select the administrator for your friend list
+setmasternode.dialog.title=Friend list administrator
 setmasternode.key=a
 setmasternode.name=Select Admin User
 
