--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -29,6 +29,7 @@ aborttransfer.icon=icons/Abort.gif
 openfile.icon=icons/Play.gif
 addpattern.icon=icons/Pattern.gif
 settings.icon=icons/Settings.gif
+dialog.icon=icons/Dialog.gif
 downloadfile.icon=icons/Download.gif
 deletefile.icon=icons/Delete.gif
 open_local_folder.icon=icons/Directory.gif
