--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -262,7 +262,7 @@ filenameproblem.dialog.add_to_ignore=Add to ignore
 filenameproblem.dialog.add_to_ignore.explained=Add this file to the list of files that are excluded from sharing
 filenameproblem.dialog.automatic_rename=Automatic rename
 filenameproblem.dialog.automatic_rename.explained=removes invalid characters and or adds "-1", or similair fixes to create a valid (unique) filename
-filenameproblem.dialog.description=Filename problem(s) detected, select for each file a solution
+filenameproblem.dialog.description=Filename problem(s) detected, select a solution for each file
 filenameproblem.dialog.do_nothing=Do nothing
 filenameproblem.dialog.solution=Solution
 filenameproblem.dialog.title=Filename problem(s) detected
@@ -495,6 +495,9 @@ infoside.title=Information
 
 invitationfiles.description=PowerFolder invitations
 
+invitation.utils.unable.write.title=Unable to write invitation
+invitation.utils.unable.write.text=Error while writing invitation, please try again.
+
 joinfolder.already_joined_text=You are already a member of folder {0}
 joinfolder.already_joined_title=Unable to join {0}
 
@@ -673,6 +676,7 @@ preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
 preferences.dialog.dyndnsUpdateButton=Force Update
 preferences.dialog.dyndnsUpdateError=DynDns service returned an error\:
 preferences.dialog.dyndnsUpdateTitle=DynDns Updater
+preferences.dialog.dyndnsUpdateText=The field {0} can not be empty!
 preferences.dialog.dyndnsUpdateUnknowError=DynDns service returned an unknown warning.
 preferences.dialog.dyndnsUpdateWarning=DynDns service returned a warning\:
 preferences.dialog.dyndnsUpdatedIP=Updated DynDns IP
@@ -890,6 +894,8 @@ sendinvitation.toclipboard=To clipboard...
 sendinvitation.todisk=To disk...
 sendinvitation.user.text=Select the folder you want {0} invite to
 sendinvitation.user.title=Invite {0} to a folder
+sendinvitation.allFolders.text=Unable to invite {0} to any folder\nUser already joined all your folders
+sendinvitation.allFolders.title={0} already on all folders
 
 setmasternode.description=Selects the administration user for your friend list. Friend list loaded from adminitrator
 setmasternode.dialog.text=Select the administrator for your friend list
@@ -910,6 +916,9 @@ splash.version=Version {0}
 startdownloads.description=Opens the selected downloaded files
 startdownloads.key=O
 startdownloads.name=Open
+
+start.file.unable.title=Unable to start
+start.file.unable.text=Unable to start\n{0}
 
 status.download=Down\: %.2f KB/s
 status.port=Port\: {0}
