--- a/src/test-resources/ControllerBart.config
+++ b/src/test-resources/ControllerBart.config
@@ -1,6 +1,6 @@
 #PowerFolder config file (v0.9.3 devel)
 #Mon Apr 17 00:47:18 CEST 2006
-nodeid=randomstringBart
+nodeid=randomstringBart_relay
 lanuploadlimit=0
 net.bindaddress=127.0.0.1
 nick=Bart
