--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -671,6 +671,7 @@ preferences.dialog.dyndnsAutoUpdate=Keep dyndns up-to-date
 preferences.dialog.dyndnsCurrentIP=Current IP
 preferences.dialog.dyndnsHostname=Hostname
 preferences.dialog.dyndnsLoginPanel=Login
+preferences.dialog.use.relayed.connections=Use relayed connections to improve connectivity
 preferences.dialog.dyndnsPassword=Password
 preferences.dialog.dyndnsSettingsTabbedPane=DynDns Settings
 preferences.dialog.dyndnsUpdateButton=Force Update
