Added more general items

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -479,6 +479,9 @@ general.webservice=Online Storage
 general.wednesday=Wednesday
 general.whatisthis=What is this?
 general.yesterday=yesterday
+general.accept=Accept
+general.reject=Reject
+general.delete=Delete
 
 hideoffline.description=The offline users will be filtered from this search result
 hideoffline.key=H
