--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -447,7 +447,7 @@ general.hours=Hour(s)
 general.inet=Internet
 general.localcopyat=Local copy at
 general.localcopyplace=Choose a place for local copy
-general.localized_date_format=MMMM dd. yyyy
+general.localized_date_format=MMMM dd yyyy
 general.localnet=LAN
 general.member=Member
 general.minutes=Minute(s)
