#76 - Partial implementation of preview folders.

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -23,6 +23,8 @@ clearrecentdownloads.icon=icons/Clear.gif
 #setmasternode.icon=icons/Node.gif
 showfileinfo.icon=icons/SendMessage.gif
 aborttransfer.icon=icons/Abort.gif
+preview_folders.icon=icons/PreviewFolders.gif
+folders.icon=icons/Folders.gif
 #openchat.icon=icons/Chat.gif
 #sendinvitation.icon=icons/Chat.gif
 #reconnect.icon=icons/Connect.gif
