--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -327,6 +327,7 @@ folderjoin.invitationtext=Message
 folderjoin.invitortofriend=Add invitor to friends
 folderjoin.key=J
 folderjoin.name=Join
+folderjoin.preview_only=Preview only
 folderjoin.public=Public
 folderjoin.secret=Secret
 folderjoin.warning.notempty.text=The directory for the local copy of folder '{0}' is not empty.\nAll files contained there will be uploaded to its members.\nAre you sure you want to place the local copy of this folder at\n'{1}'?
@@ -965,6 +966,7 @@ systray.tooltip.up.mb=Up {0} MBs
 title.friends=Friends
 title.my.folders=My Folders
 title.network.statistics=Network Statistics
+title.preview.folders=Preview Folders
 title.public.folder=Public Folder
 title.public.folders=Public Folders
 title.search.users=Find Friends
