#76 - Fix missing resource and have join / preview buttons.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -325,10 +325,13 @@ folderjoin.inivtation=Invitation received
 folderjoin.inivtationfrom=Invitation received from {0}
 folderjoin.invitationtext=Message
 folderjoin.invitortofriend=Add invitor to friends
+folderjoin.join=Join
+folderjoin.join.key=J
 folderjoin.key=J
 folderjoin.name=Join
-folderjoin.preview_only=Preview only
-folderjoin.public=Public
+folderjoin.preview=Preview
+folderjoin.preview.key=P
+folderjoin.preview_only=
 folderjoin.secret=Secret
 folderjoin.warning.notempty.text=The directory for the local copy of folder '{0}' is not empty.\nAll files contained there will be uploaded to its members.\nAre you sure you want to place the local copy of this folder at\n'{1}'?
 folderjoin.warning.notempty.title=Local base directory not empty
