#76 - Ask what to do about preview folders on restart. Intoduce constants for folder settings.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -397,7 +397,13 @@ folderpanel.settingstab.userecyclebin=Use recycle bin
 
 folderrepository.warnonclose.text=These folders are not synchronized yet\:\n\n\n\n{0}\n\n\nContinue Exit?
 folderrepository.warnonclose.title=Continue Exit?
-
+folderrepository.please_recreate=Please recreate it.
+folderrepository.preview_folder.title=Preview Folder
+folderrepository.preview_folder.text=Folder {0} is a preview folder.\n\nWhat would you like to do?
+folderrepository.join_folder=Join Folder
+folderrepository.leave_folder=Leave Folder
+folderrepository.continue_previewing=Continue Previewing
+   
 freelimitdialog.buypro=Buy PowerFolder Pro
 freelimitdialog.buyrecommendation=It is required that you upgrade to the Pro Version or reduce your usage.
 freelimitdialog.buyrecommendation2=PowerFolder is currently disabled until you take action.
