#76 - Fix up some headings, etc.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -308,8 +308,8 @@ foldercreate.error.unable_to_open=Unable to open local directory '{0}'. Seems to
 foldercreate.key=N
 foldercreate.name=New Folder
 foldercreate.nameempty.text=Name of folder should not be empty
-foldercreate.nameempty.title=Foldername required
-foldercreate.progress.text=Creating Folder '{0}'
+foldercreate.nameempty.title=Folder name required
+foldercreate.progress.text=Creating folder '{0}'
 foldercreate.success=Folder {0} shared, local copy at '{1}'
 
 folderexception.dialog.text=Unable to join folder '{0}'.\nReason\: {1}
@@ -319,7 +319,7 @@ folderinfo.header=Folder Details
 folderinfo.syncprofile=Sync profile
 folderinfo.totalsync=Total sync
 
-folderjoin.description=Join this Folder
+folderjoin.description=Join this folder
 folderjoin.dialog.title=Join folder {0}?
 folderjoin.inivtation=Invitation received
 folderjoin.inivtationfrom=Invitation received from {0}
@@ -348,6 +348,8 @@ foldermove.progress.text=Moving folder '{0}'
 foldermove.progress.title=Folder Move
 
 folderpanel.chattab.title=Chat
+folderpanel.chat.key=C
+folderpanel.files.key=F
 folderpanel.filestab.dropfile_duplicate_dialog.skipall=Skip All Duplicates
 folderpanel.filestab.dropfile_duplicate_dialog.text=This folder already contains a file '{0}' would you like to overwrite the existing file?
 folderpanel.filestab.dropfile_duplicate_dialog.title=File exists
@@ -373,9 +375,12 @@ folderpanel.hometab.secret_folder=Secret
 folderpanel.hometab.synchronisation_eta=Synchronization ETA
 folderpanel.hometab.synchronisation_percentage=Synchronization percentage
 folderpanel.hometab.title=Home
+folderpanel.home.key=H
 folderpanel.hometab.total_size=Total size
 folderpanel.hometab.working.description=The folder is being moved
 folderpanel.hometab.working.title=Moving folder
+folderpanel.members.key=M
+folderpanel.settings.key=S
 folderpanel.settingstab.add_a_pattern.example=example/*.jpg
 folderpanel.settingstab.add_a_pattern.text=Enter a pattern to exclude files from synchronization
 folderpanel.settingstab.add_a_pattern.title=Add ignore pattern
@@ -756,7 +761,7 @@ preferences.dialog.xbehavior.minimize=Minimize to system tray
 preferences.key=p
 preferences.name=Preferences
 
-previewfiles.description=Preview files in this Folder
+previewfiles.description=Preview files in this folder
 previewfiles.key=P
 previewfiles.name=Preview
 
@@ -805,15 +810,19 @@ quickinfo.folder.status_of_folder=Status of {0}
 quickinfo.friends.online={0} of {1} friend(s) are online
 quickinfo.friends.title=Find Users
 quickinfo.friends.usersfound={0} users found
-quickinfo.myfolders.folders={0} in {1} Folder(s)
-quickinfo.myfolders.insyncall=All Folders are synchronized
+quickinfo.myfolders.folders={0} in {1} folder(s)
+quickinfo.myfolders.insyncall=All folders are synchronized
 quickinfo.myfolders.syncing=Synchronizing {0}
-quickinfo.myfolders.title=Status of my Folders
+quickinfo.myfolders.title=Status of My Folders
+quickinfo.previewfolders.title=Status of Preview Folders
+quickinfo.previewfolders.insyncall=All folders are synchronized
+quickinfo.previewfolders.folders={0} in {1} folder(s)
+quickinfo.previewfolders.syncing=Synchronizing {0}
 quickinfo.recylcebin.files={0} file(s) in Recycle Bin
 quickinfo.recylcebin.title=Recycle Bin
 quickinfo.root.downloads={0} download(s) recently completed
 quickinfo.root.friends={0} friend(s) online
-quickinfo.root.insync=All Folders are synchronized
+quickinfo.root.insync=All folders are synchronized
 quickinfo.root.offline=Offline
 quickinfo.root.syncing=Sync in progress...
 quickinfo.root.title=Welcome to PowerFolder\!
@@ -824,7 +833,7 @@ quickinfo.user.isconnectedlan=Is on LAN
 quickinfo.user.isdiconnected=Is disconnected
 quickinfo.user.secureconnected=securely connected
 quickinfo.webservice.connected=Connected to the PowerFolder Online Storage
-quickinfo.webservice.foldersmirrored={0} of {1} Folder(s) get backed up
+quickinfo.webservice.foldersmirrored={0} of {1} folder(s) get backed up
 quickinfo.webservice.notavailable=Online Storage not available in LAN only mode
 quickinfo.webservice.notconnected=Disconnected from PowerFolder Online Storage
 quickinfo.webservice.notsetup=Online Storage not configured yet
